// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parser Modifiers Tests > Parse Definition with Modifier 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 18,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 18,
        "Text": "]",
        "Trailing": [],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 8,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 8,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 9,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 9,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 19,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": {
        "FullStart": 1,
        "Kind": 104,
        "Leading": [],
        "Length": 1,
        "Start": 1,
        "Text": "#",
        "Trailing": [],
        "Value": undefined,
      },
      "name": {
        "end": 18,
        "isIncomplete": false,
        "kind": 3,
        "start": 10,
        "text": "MyReport",
        "tokens": [
          {
            "FullStart": 10,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 10,
            "Text": "MyReport",
            "Trailing": [],
            "Value": "MyReport",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [],
        "Length": 1,
        "Start": 0,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 0,
      "statements": [],
      "type": {
        "end": 8,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Report",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 6,
            "Start": 2,
            "Text": "Report",
            "Trailing": [],
            "Value": "Report",
          },
        ],
      },
    },
  ],
  "directives": [],
  "end": 19,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
  ],
  "start": 0,
  "text": "[#Report: MyReport]",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [],
      "Length": 1,
      "Start": 0,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 1,
      "Kind": 104,
      "Leading": [],
      "Length": 1,
      "Start": 1,
      "Text": "#",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 2,
      "Text": "Report",
      "Trailing": [],
      "Value": "Report",
    },
    {
      "FullStart": 8,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 8,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 9,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 9,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 10,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 10,
      "Text": "MyReport",
      "Trailing": [],
      "Value": "MyReport",
    },
    {
      "FullStart": 18,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 18,
      "Text": "]",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 19,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 19,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;

exports[`Parser Modifiers Tests > Parse Definition with Optional Modifier 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 16,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 16,
        "Text": "]",
        "Trailing": [],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 7,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 7,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 8,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 8,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 17,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": {
        "FullStart": 1,
        "Kind": 102,
        "Leading": [],
        "Length": 1,
        "Start": 1,
        "Text": "!",
        "Trailing": [],
        "Value": undefined,
      },
      "name": {
        "end": 16,
        "isIncomplete": false,
        "kind": 3,
        "start": 9,
        "text": "MyField",
        "tokens": [
          {
            "FullStart": 9,
            "Kind": 600,
            "Leading": [],
            "Length": 7,
            "Start": 9,
            "Text": "MyField",
            "Trailing": [],
            "Value": "MyField",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [],
        "Length": 1,
        "Start": 0,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 0,
      "statements": [],
      "type": {
        "end": 7,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Field",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 5,
            "Start": 2,
            "Text": "Field",
            "Trailing": [],
            "Value": "Field",
          },
        ],
      },
    },
  ],
  "directives": [],
  "end": 17,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
  ],
  "start": 0,
  "text": "[!Field: MyField]",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [],
      "Length": 1,
      "Start": 0,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 1,
      "Kind": 102,
      "Leading": [],
      "Length": 1,
      "Start": 1,
      "Text": "!",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 2,
      "Text": "Field",
      "Trailing": [],
      "Value": "Field",
    },
    {
      "FullStart": 7,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 7,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 8,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 8,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 9,
      "Kind": 600,
      "Leading": [],
      "Length": 7,
      "Start": 9,
      "Text": "MyField",
      "Trailing": [],
      "Value": "MyField",
    },
    {
      "FullStart": 16,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 16,
      "Text": "]",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 17,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 17,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;
